{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 41,
  "lineage": "9a7101b8-1910-724f-10b2-19eb9c4ffbaf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0af6510eb1c2cfa34",
            "association_id": "eipassoc-00a33ab47b3c6657d",
            "domain": "vpc",
            "id": "eipalloc-0af6510eb1c2cfa34",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-02bfb3a6bc50d9d3f",
            "private_dns": "ip-10-10-1-82.ap-northeast-2.compute.internal",
            "private_ip": "10.10.1.82",
            "public_dns": "ec2-52-79-83-9.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.79.83.9",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:431410879895:internet-gateway/igw-0f5c59f84a4ff8491",
            "id": "igw-0f5c59f84a4ff8491",
            "owner_id": "431410879895",
            "tags": {
              "Name": "internet_gateway"
            },
            "tags_all": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-09de2f4281603ec50"
          },
          "dependencies": [
            "aws_vpc.goormVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:431410879895:loadbalancer/app/app-lb/c00ea7d1ffaf1d4d",
            "arn_suffix": "app/app-lb/c00ea7d1ffaf1d4d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-app-lb-1705595140.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:431410879895:loadbalancer/app/app-lb/c00ea7d1ffaf1d4d",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01dc94116fb9739b5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07302c78c9827fa6b"
              },
              {
                "subnet_id": "subnet-0eeb0e1fdb7683e9a"
              }
            ],
            "subnets": [
              "subnet-07302c78c9827fa6b",
              "subnet-0eeb0e1fdb7683e9a"
            ],
            "vpc_id": "vpc-09de2f4281603ec50",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.goormVPC_security_group",
            "aws_subnet.private_app_a",
            "aws_subnet.private_app_c",
            "aws_vpc.goormVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:431410879895:loadbalancer/app/web-lb/d7ed9d8c4d656e56",
            "arn_suffix": "app/web-lb/d7ed9d8c4d656e56",
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-lb-776020789.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:431410879895:loadbalancer/app/web-lb/d7ed9d8c4d656e56",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01dc94116fb9739b5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-044160d62b7dace21"
              },
              {
                "subnet_id": "subnet-0d76e96b0651ca3ef"
              }
            ],
            "subnets": [
              "subnet-044160d62b7dace21",
              "subnet-0d76e96b0651ca3ef"
            ],
            "vpc_id": "vpc-09de2f4281603ec50",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.goormVPC_security_group",
            "aws_subnet.public_web_a",
            "aws_subnet.public_web_c",
            "aws_vpc.goormVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:431410879895:listener/app/app-lb/c00ea7d1ffaf1d4d/2c3cdb5e1eb7e34f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:431410879895:targetgroup/app-lb-target-group/65267f72bf44aaa9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:431410879895:listener/app/app-lb/c00ea7d1ffaf1d4d/2c3cdb5e1eb7e34f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:431410879895:loadbalancer/app/app-lb/c00ea7d1ffaf1d4d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.app_lb_target_group",
            "aws_security_group.goormVPC_security_group",
            "aws_subnet.private_app_a",
            "aws_subnet.private_app_c",
            "aws_vpc.goormVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:431410879895:listener/app/web-lb/d7ed9d8c4d656e56/ce803927f7f3519a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:431410879895:targetgroup/web-lb-target-group/68c5a90dd0b4514f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:431410879895:listener/app/web-lb/d7ed9d8c4d656e56/ce803927f7f3519a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:431410879895:loadbalancer/app/web-lb/d7ed9d8c4d656e56",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.web_lb",
            "aws_lb_target_group.web_lb_target_group",
            "aws_security_group.goormVPC_security_group",
            "aws_subnet.public_web_a",
            "aws_subnet.public_web_c",
            "aws_vpc.goormVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:431410879895:targetgroup/app-lb-target-group/65267f72bf44aaa9",
            "arn_suffix": "targetgroup/app-lb-target-group/65267f72bf44aaa9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:431410879895:targetgroup/app-lb-target-group/65267f72bf44aaa9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-lb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09de2f4281603ec50"
          },
          "dependencies": [
            "aws_vpc.goormVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:431410879895:targetgroup/web-lb-target-group/68c5a90dd0b4514f",
            "arn_suffix": "targetgroup/web-lb-target-group/68c5a90dd0b4514f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:431410879895:targetgroup/web-lb-target-group/68c5a90dd0b4514f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-lb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09de2f4281603ec50"
          },
          "dependencies": [
            "aws_vpc.goormVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0af6510eb1c2cfa34",
            "association_id": "eipassoc-00a33ab47b3c6657d",
            "connectivity_type": "public",
            "id": "nat-0a43a087f6e93e0ff",
            "network_interface_id": "eni-02bfb3a6bc50d9d3f",
            "private_ip": "10.10.1.82",
            "public_ip": "52.79.83.9",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-044160d62b7dace21",
            "tags": {
              "Name": "NAT Gateway"
            },
            "tags_all": {
              "Name": "NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_web_a",
            "aws_vpc.goormVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route_table_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-008e83fcdcd6bfb761080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a43a087f6e93e0ff",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-008e83fcdcd6bfb76",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.app_route_table",
            "aws_subnet.public_web_a",
            "aws_vpc.goormVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:431410879895:route-table/rtb-008e83fcdcd6bfb76",
            "id": "rtb-008e83fcdcd6bfb76",
            "owner_id": "431410879895",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a43a087f6e93e0ff",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private App Route Table"
            },
            "tags_all": {
              "Name": "Private App Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09de2f4281603ec50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.goormVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:431410879895:route-table/rtb-0845668c5011f8cc5",
            "id": "rtb-0845668c5011f8cc5",
            "owner_id": "431410879895",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f5c59f84a4ff8491",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Web Route Table"
            },
            "tags_all": {
              "Name": "Public Web Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09de2f4281603ec50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.goormVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_db_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035751a8edd9f39da",
            "route_table_id": "rtb-008e83fcdcd6bfb76",
            "subnet_id": "subnet-06f478f268c7ad3c9"
          },
          "dependencies": [
            "aws_route_table.app_route_table",
            "aws_subnet.private_db_a",
            "aws_vpc.goormVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_route_table_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f96ab184c5272866",
            "route_table_id": "rtb-008e83fcdcd6bfb76",
            "subnet_id": "subnet-07302c78c9827fa6b"
          },
          "dependencies": [
            "aws_route_table.app_route_table",
            "aws_subnet.private_app_a",
            "aws_vpc.goormVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_route_table_association_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a0c8868e0de57b4",
            "route_table_id": "rtb-008e83fcdcd6bfb76",
            "subnet_id": "subnet-0eeb0e1fdb7683e9a"
          },
          "dependencies": [
            "aws_route_table.app_route_table",
            "aws_subnet.private_app_c",
            "aws_vpc.goormVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_route_table_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0510a16831c647368",
            "route_table_id": "rtb-0845668c5011f8cc5",
            "subnet_id": "subnet-044160d62b7dace21"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.web_route_table",
            "aws_subnet.public_web_a",
            "aws_vpc.goormVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_route_table_association_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e96b8fa03fa896a",
            "route_table_id": "rtb-0845668c5011f8cc5",
            "subnet_id": "subnet-0d76e96b0651ca3ef"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.web_route_table",
            "aws_subnet.public_web_c",
            "aws_vpc.goormVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "goormVPC_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:431410879895:security-group/sg-01dc94116fb9739b5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01dc94116fb9739b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "goormVPC_security_group",
            "name_prefix": "",
            "owner_id": "431410879895",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09de2f4281603ec50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.goormVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:431410879895:security-group/sg-0e2dd8b56415309b2",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e2dd8b56415309b2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01dc94116fb9739b5"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_security_group",
            "name_prefix": "",
            "owner_id": "431410879895",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds_security_group"
            },
            "tags_all": {
              "Name": "rds_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09de2f4281603ec50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.goormVPC_security_group",
            "aws_vpc.goormVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:431410879895:subnet/subnet-07302c78c9827fa6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07302c78c9827fa6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "431410879895",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_app_a"
            },
            "tags_all": {
              "Name": "private_app_a"
            },
            "vpc_id": "vpc-09de2f4281603ec50"
          },
          "dependencies": [
            "aws_vpc.goormVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:431410879895:subnet/subnet-0eeb0e1fdb7683e9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eeb0e1fdb7683e9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "431410879895",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_app_c"
            },
            "tags_all": {
              "Name": "private_app_c"
            },
            "vpc_id": "vpc-09de2f4281603ec50"
          },
          "dependencies": [
            "aws_vpc.goormVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:431410879895:subnet/subnet-06f478f268c7ad3c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f478f268c7ad3c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "431410879895",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_db_a"
            },
            "tags_all": {
              "Name": "private_db_a"
            },
            "vpc_id": "vpc-09de2f4281603ec50"
          },
          "dependencies": [
            "aws_vpc.goormVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:431410879895:subnet/subnet-08b3c2dec65cad99f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.200.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b3c2dec65cad99f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "431410879895",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_db_c"
            },
            "tags_all": {
              "Name": "private_db_c"
            },
            "vpc_id": "vpc-09de2f4281603ec50"
          },
          "dependencies": [
            "aws_vpc.goormVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_web_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:431410879895:subnet/subnet-044160d62b7dace21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044160d62b7dace21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "431410879895",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_web_a"
            },
            "tags_all": {
              "Name": "public_web_a"
            },
            "vpc_id": "vpc-09de2f4281603ec50"
          },
          "dependencies": [
            "aws_vpc.goormVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_web_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:431410879895:subnet/subnet-0d76e96b0651ca3ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d76e96b0651ca3ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "431410879895",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_web_c"
            },
            "tags_all": {
              "Name": "public_web_c"
            },
            "vpc_id": "vpc-09de2f4281603ec50"
          },
          "dependencies": [
            "aws_vpc.goormVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "goormVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:431410879895:vpc/vpc-09de2f4281603ec50",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0551343e3828b68f9",
            "default_route_table_id": "rtb-0374de5e3f95a1912",
            "default_security_group_id": "sg-0db33bfd9edc68cd9",
            "dhcp_options_id": "dopt-0b8d62eef1c6e46e1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09de2f4281603ec50",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0374de5e3f95a1912",
            "owner_id": "431410879895",
            "tags": {
              "Name": "goormVPC"
            },
            "tags_all": {
              "Name": "goormVPC"
            }
          }
        }
      ]
    }
  ]
}